# algorithms

./: README.md
percolation/: .gitignore  Cargo.toml  README.md
percolation/src/: lib.rs
percolation/src/errors/: mod.rs  size_is_too_big_error.rs  size_is_too_small_error.rs
percolation/tests/: lib_test.rs
quickfind/: Cargo.toml  README.md
quickfind/src/: lib.rs
quickfind/tests/: lib_test.rs
