[package]
name = "percolation"
version = "0.0.0"
authors = ["Dmitry N. Medvedev <dmitry.medvedev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[profile.release]
panic = 'abort'

[profile.dev]
panic = 'abort'
